# r-dataconnector

./: .gitmodules  LICENSE  README.md
benchmarks/: README.md
dataconnector/: DESCRIPTION  NAMESPACE
dataconnector/R/: RcppExports.R
dataconnector/inst/tests/: testthat.R
dataconnector/man/: object2hdfs.Rd  orc2dataframe.Rd
dataconnector/src/: Makevars  RcppExports.cpp  ddc_rbindings.cpp
dataconnector/src/distributed-data-connector/: ddc.files  ddc.includes
dataconnector/src/distributed-data-connector/ddc/: Makefile  README.md
ddc/: DESCRIPTION  NAMESPACE
ddc/R/: RcppExports.R
ddc/man/: ddc-package.Rd
ddc/src/: Makevars  RcppExports.cpp  ddc_rbindings.cpp
ddc/tests/: testthat.R
ddc/tests/testthat/: test_csv.R  test_orc.R
hdfsconnector/: DESCRIPTION  NAMESPACE
hdfsconnector/R/: RcppExports.R  dataconnector.R  hdfsConnector.R
hdfsconnector/inst/conf/: hdfs.json
hdfsconnector/man/: csv2dataframe.Rd  dataconnector.Rd  hdfsconnector.Rd  object2hdfs.Rd  orc2dataframe.Rd
hdfsconnector/src/: Makevars  RcppExports.cpp  ddc_rbindings.cpp
hdfsconnector/src/distributed-data-connector/: .gitmodules  README.md
hdfsconnector/src/distributed-data-connector/ddc/: CMakeLists.txt  TODO.md
hdfsconnector/src/distributed-data-connector/ddc/assembler/: assemblerfactory.h  iassembler.h  rdataframeassembler.h
hdfsconnector/src/distributed-data-connector/ddc/assembler/src/: assemblerfactory.cpp  devnullassembler.cpp  devnullassembler.h  fakeassembler.cpp  fakeassembler.h  rdataframeassembler.cpp
hdfsconnector/src/distributed-data-connector/ddc/assembler/test/: assembler_benchmark.cpp  assembler_test.cpp
hdfsconnector/src/distributed-data-connector/ddc/base/: anymap.h  cache.h  configurationmap.h  ifile.h  iiterator.h  iobserver.h  producerconsumerqueue.h  runnable.h  scopedfile.h  threadsafevector.h  utils.h  variantmap.h
hdfsconnector/src/distributed-data-connector/ddc/base/src/: anymap.cpp  cache.cpp  configurationmap.cpp  scopedfile.cpp  utils.cpp  variantmap.cpp
hdfsconnector/src/distributed-data-connector/ddc/base/test/: anymap_test.cpp  cache_test.cpp  utils_test.cpp  variantmap_test.cpp
hdfsconnector/src/distributed-data-connector/ddc/blockreader/: block.h  blockreaderfactory.h  hdfsblockreader.h  iblockreader.h  localblockreader.h
hdfsconnector/src/distributed-data-connector/ddc/blockreader/src/: blockreaderfactory.cpp  fakeblockreader.cpp  fakeblockreader.h  hdfsblockreader.cpp  localblockreader.cpp  prefetchblockreader.cpp  prefetchblockreader.h
hdfsconnector/src/distributed-data-connector/ddc/blockreader/test/: block_test.cpp  blockreader_benchmark.cpp  blockreader_test.cpp  hdfsblockreader_test.cpp  prefetchblockreader_test.cpp
hdfsconnector/src/distributed-data-connector/ddc/ddc/: ddc.h  globals.h
hdfsconnector/src/distributed-data-connector/ddc/ddc/src/: ddc.cpp  globals.cpp
hdfsconnector/src/distributed-data-connector/ddc/ddc/test/: ddc_test.cpp  driver.cpp
hdfsconnector/src/distributed-data-connector/ddc/ddc/test/data/: server.conf
hdfsconnector/src/distributed-data-connector/ddc/distributor/: distributor.pb.h  distributor.proto  master.h  requestreceiver.h  requestsender.h  split.h  transport.h  workerrequesthandler.h  zmqutils.h
hdfsconnector/src/distributed-data-connector/ddc/distributor/src/: distributor.pb.cpp  master.cpp  requestreceiver.cpp  requestsender.cpp  transport.cpp  workerrequesthandler.cpp  zmqutils.cpp
hdfsconnector/src/distributed-data-connector/ddc/distributor/test/: master_test.cpp  requestreceiver_test.cpp  requestsender_test.cpp
hdfsconnector/src/distributed-data-connector/ddc/hdfsutils/: basicurldownloader.h  failoverurldownloader.h  filefactory.h  hdfsblock.h  hdfsblocklocator.h  hdfsfile.h  hdfsinputstream.h  hdfsutils.h  iurldownloader.h
hdfsconnector/src/distributed-data-connector/ddc/hdfsutils/src/: basicurldownloader.cpp  failoverurldownloader.cpp  filefactory.cpp  hdfsblocklocator.cpp  hdfsfile.cpp  hdfsinputstream.cpp  hdfsutils.cpp
hdfsconnector/src/distributed-data-connector/ddc/hdfsutils/test/: basicurldownloader_test.cpp  blockloader_test.cpp  hdfsblocklocator_test.cpp  hdfsfile_test.cpp  hdfsutils_test.cpp  storage_test.cpp
hdfsconnector/src/distributed-data-connector/ddc/recordparser/: csvrecordparser.h  irecordparser.h  orcrecordparser.h  recordparserfactory.h
hdfsconnector/src/distributed-data-connector/ddc/recordparser/src/: csvrecordparser.cpp  csvrecordparser.h  fakerecordparser.cpp  fakerecordparser.h  mockrecordparser.cpp  mockrecordparser.h  orcrecordparser.cpp  recordparserfactory.cpp
hdfsconnector/src/distributed-data-connector/ddc/recordparser/test/: csvrecordparser_test.cpp  recordparser_benchmark.cpp  recordparser_test.cpp  textcsv_test.cpp
hdfsconnector/src/distributed-data-connector/ddc/scheduler/: chunkscheduler.h  hdfslocalityscheduler.h  roundrobinscheduler.h  scheduler.h  schedulerfactory.h
hdfsconnector/src/distributed-data-connector/ddc/scheduler/src/: chunkscheduler.cpp  hdfslocalityscheduler.cpp  roundrobinscheduler.cpp  schedulerfactory.cpp
hdfsconnector/src/distributed-data-connector/ddc/scheduler/test/: chunkscheduler_test.cpp
hdfsconnector/src/distributed-data-connector/ddc/splitproducer/: isplitproducer.h  split.h  splitproducerfactory.h
hdfsconnector/src/distributed-data-connector/ddc/splitproducer/src/: delimitersplitproducer.cpp  delimitersplitproducer.h  fakesplitproducer.cpp  fakesplitproducer.h  offsetsplitproducer.cpp  offsetsplitproducer.h  splitproducerfactory.cpp
hdfsconnector/src/distributed-data-connector/ddc/splitproducer/test/: splitproducer_benchmark.cpp  splitproducer_test.cpp
hdfsconnector/src/distributed-data-connector/ddc/tools/: create_class.py  create_schema.py  create_test_csv_files.sh  license.py  load_files.py  ppjson.py  profiler.sh  run_tests.sh
hdfsconnector/src/distributed-data-connector/ddc/worker/: worker.h
hdfsconnector/src/distributed-data-connector/ddc/worker/src/: worker.cpp
hdfsconnector/src/distributed-data-connector/ddc/worker/test/: worker_test.cpp
tools/: gen_orc_tests.py  gen_tests.py
(+93 files in other folders)
